# Shane-Portfolio

./: README.md
School/Fall 2023/IT279-Algorithms and Data Structures/Homework 3/: Homework 3.docx  LLHW1.cpp
School/Fall 2023/IT279-Algorithms and Data Structures/Honors contract/: Node.cpp  Node.h  Trie.h  main.cpp
School/Fall 2023/IT327-Concepts of Programming Languages/Rust Assignment/: RideQueue.rs  linkedlist.rs  ownership.rs  test.rs  trait.rs  trivialProgram.rs
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Assignment1/: IT 340 Assignment 1.docx  shane_stevens_assignment1.py
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Assignment2/: 8-queen-fitness.py  Assignment 2 graphs.docx  IT 340 Assignment 2-1.docx  Romania_Holiday.py  ~$signment 2 graphs.docx
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Assignment3/: PolicyEvaluation.py
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Final_Project/: Final-1.docx  Word embedding.docx
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Final_Project/final_project/: final_project.py  training.txt
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Honors Project/: README.txt  bag_of_words.ipynb
School/Fall 2024/IT340-Introduction to Artificial Intelligence/Honors Project/.ipynb_checkpoints/: bag_of_words-checkpoint.ipynb
School/Fall 2024/IT340-Introduction to Artificial Intelligence/midterm2/: IT 340 Midterm 2.docx  Naive_Bayesian_Your_Name.py  Shane_Stevens_Midterm2_write_up.docx
School/Fall 2024/IT340-Introduction to Artificial Intelligence/midterm2/Shane_Stevens_Midterm2/: Naive_Bayesian_Shane_Stevens.py
School/Fall 2024/IT348-Introduction to Machine Learning/Project_1/: Project_1.docx  Project_1_template2.py
School/Fall 2024/IT348-Introduction to Machine Learning/Project_1/.ipynb_checkpoints/: Project_1_template2-checkpoint.ipynb
School/Fall 2024/IT348-Introduction to Machine Learning/Project_2/: Project2_Shane_Stevens.ipynb  Project2_template.py  Project_2.docx
School/Fall 2024/IT348-Introduction to Machine Learning/Project_2/.ipynb_checkpoints/: Project2_template-checkpoint.ipynb
School/Fall 2024/IT348-Introduction to Machine Learning/Project_3/: Project_3.docx  ~$oject_3.docx
School/Fall 2024/IT348-Introduction to Machine Learning/Project_3/.ipynb_checkpoints/: Project_3-checkpoint.ipynb  program_3-checkpoint.py
School/Fall 2024/IT348-Introduction to Machine Learning/Project_3/Shane_Stevens_Program3_code/: Program 3 Report.docx  Project_3.ipynb  README.txt
School/Fall 2024/IT348-Introduction to Machine Learning/Project_3/lecture/: 10_UnsupervisedLearning.pptx  12_DeepLearning.pptx  12_DeepLearning_RNN.pptx  12_DeepLearning_regularization.pptx  13_languageModel_smoothing2.pptx  3_supervisedLearning_II.pptx  4_SupervisedLearning_III.pptx  5_SupervisedLearning_IV (1).pptx  6_Ensemble_Learning(I).pptx  7_Ensemble_Learning(II).pptx  8_UnsupervisedLearnin_I.pptx  9_UnsupervisedLearning_II.pptx
School/Fall 2024/IT383-Principles of Operating Systems/assignment2/: Assignment2 Program 1 writeup.docx  Assignment2-2.docx  execlp.c  execvp.c  execvp.txt  fork execlp, and wait.txt  my_copy_textbinary_count.c  ~$signment2 Program 1 writeup.docx
School/Fall 2024/IT386-Introduction to Networking and Parallel and Distributed Computing/: Activity13.java  ParallelSum.java
School/Fall 2024/IT386-Introduction to Networking and Parallel and Distributed Computing/Program3/: ClientTCP.java  README.txt
School/Fall 2024/IT386-Introduction to Networking and Parallel and Distributed Computing/program1/: ClientUDP.java  ServerUDP.java
School/Fall 2024/IT386-Introduction to Networking and Parallel and Distributed Computing/program2/: Client.java  ComputeImpl.java  ComputeInterface.java  Server.java
School/Spring 2024/IT326-Principles of Software Engineering/assignment5/: Assignment 5.docx  Diagram.vsdx  InsertionSort.java  InsertionSortTest.java
School/Spring 2024/IT328-Theory of Computation/dfa files/: DFA.java  NFA.java  NFA2DFA.java  convertNFA.java  minimizeDFA.java
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 01/: it356_assign01_Stevens.docx
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 01/src/: CMakeLists.txt
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 01/src/cmake/: FindGLM.cmake
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 01/src/shader/: q1_triangles1.frag  q1_triangles2.frag  q2_triangles1.frag  q2_triangles3.frag  q2_triangles4.frag  q3_fshader.glsl  q3_vshader.glsl
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 01/src/source/: Assign01_Q1.cpp  Assign01_Q2.cpp  Assign01_Q3.cpp
School/Spring 2024/IT356-Introduction to Computer Graphics/Assignment 03/: it356_assign03_answersheet_Shane.docx  ~$356_assign03_answersheet_Shane.docx
School/Spring 2024/IT356-Introduction to Computer Graphics/IT356 exam/: exam_it356_answersheet_Shane.docx  ~$am_it356_answersheet_Shane.docx  ~WRL0005.tmp
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 01/: it356_recitation01_answersheet_Shane.docx
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 01/src/: CMakeLists.txt
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 01/src/source/: graphic1_r1.cpp  graphic2_r1.cpp  graphic3_r1.cpp
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 02/: it356_recitation02_answersheet_Shane.docx
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 03/: Recitation 3 Shane.docx
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 03/src/: CMakeLists.txt
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 03/src/shader/: q1.frag  q1.vert  q2.frag  q2.vert  q3.frag
School/Spring 2024/IT356-Introduction to Computer Graphics/Recitation 03/src/source/: Recitation03_Q1.cpp  Recitation03_Q2.cpp  Recitation03_Q3.cpp
School/Spring 2024/IT378 - Database Processing/: school_system.sql
(+102 files in other folders)
